<resources>
    <string name="app_name">Student-Attendance-Management-App(CS639SpringHW3)</string>
    sss
    <string name="date">Date: </string>
    <string name="student_count">Student Count: </string>
    <string name="add_data">Add Data</string>
    <string name="clear_data">Clear Data</string>
    <string name="date_cannot_be_empty">Date cannot be empty</string>
    <string name="please_enter_the_total_amount_of_students_present">Please enter the total amount of students present</string>
    <string name="please_enter_in_valid_date">Please enter in a valid date. Must follow the format MM/dd/yyyy</string>
    <string name="please_enter_in_a_valid_number_of_students">Please enter in a valid number of students</string>
    <string name="zero">0</string>
    <string name="show_lines">Show Lines</string>
    <string name="highlight_integral">Highlight Integral</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>